--- a/src/components/Inspector/Inspector.scss
+++ b/src/components/Inspector/Inspector.scss
@@ -12,7 +12,7 @@ $grey-light: #abafbf;
 $white: #f7f8fc;
 
 [wrapper=drawer] {
-
+  width:240px;
   font-size:14px;
   [class*=Drawer-paper] {
     padding: 0 16px 16px 16px;
@@ -24,6 +24,13 @@ $white: #f7f8fc;
 
     [drawer=header] {
       height:80px;
+      display:flex;
+      align-items: center;
+      > button {
+        padding: 12px 12px 12px 0;
+        color: $blue;
+        margin-left: -8px;
+      }
     }
 
     [drawer=body] {
