--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -83,6 +83,7 @@ $white: #f7f8fc;
               border:0px none;
               padding-left: 0;
               text-transform: capitalize;
+              background-color:rgba(255,255,255,0);
             }
           }
         }
