Added Semantic UI Drop down but missing font

--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -32,6 +32,46 @@ $white: #f7f8fc;
           }
         }
 
+        [dropdown] {
+
+        }
+
+        > div:first-child {
+          display:flex;
+          > div {
+            flex:1;
+            &[dropdown] {
+              width:330px;
+              flex:initial;
+              display:flex;
+              flex-direction: column;
+              flex-direction: column;
+              background: white;
+              border-radius: 4px;
+              height: 64px;
+              padding: 12px 24px;
+              border-bottom: 1px solid #0000001f;
+              box-shadow: 0px 0.5px 0px #0000001f;
+
+              > div {
+                flex:1;
+                &:last-child {
+                  font-family: Raleway;
+                  font-weight: normal;
+                  font-size: 18px;
+                }
+              }
+              > .dropdown {
+                > .text {
+                  font-family: Raleway;
+                  font-weight: bold;
+                  font-size: 14px;
+                }
+              }
+            }
+          }
+        }
+
         hr {
           margin-top:24px;
           margin-bottom:16px;
