--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -45,20 +45,36 @@ $white: #f7f8fc;
               flex:initial;
               display:flex;
               flex-direction: column;
-              flex-direction: column;
               background: white;
               border-radius: 4px;
               height: 64px;
               padding: 12px 24px;
               border-bottom: 1px solid #0000001f;
               box-shadow: 0px 0.5px 0px #0000001f;
-
+              position:relative;
+              transition: 300ms;
               > div {
                 flex:1;
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                left: 0;
+                top: 0;
+                z-index:10;
+                transition: 300ms;
                 &:last-child {
                   font-family: Raleway;
                   font-weight: normal;
                   font-size: 18px;
+                  z-index:0;
+                  position:relative;
+                  display: flex;
+                  align-items: flex-end;
+                }
+
+                &.active {
+                  border-bottom: 3px solid $black !important;
+                  box-shadow: 0px 1.5px 10px rgba(0,0,0,.2) !important;
                 }
               }
               > .dropdown {
@@ -66,22 +82,34 @@ $white: #f7f8fc;
                   font-family: Raleway;
                   font-weight: bold;
                   font-size: 14px;
+                  width: 100%;
+                  height: 100%;
+                  padding: 8px 24px;
                 }
 
                 > .menu {
                   // Todo: Figure out why this is like this
-                  margin-top: 40px !important;
-                  margin-left: -24px;
-                  padding: 0 0 0 9px;
-                  width: calc(100% + 52px);
+                  //margin-top: 40px !important;
+                  //margin-left: -24px;
+                  //padding: 0 0 0 9px;
+                  //width: calc(100% + 52px);
 
                   > .item {
+                    padding-left:24px !important;
                     span {
                       font-family: Raleway;
                       font-size: 18px;
                       color: #4D5160;
                     }
                   }
+                }
+
+                > .dropdown.icon {
+                  height: 100%;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  width: 48px;
                 }
               }
             }
