--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -89,14 +89,14 @@ $white: #f7f8fc;
                 }
 
                 > .menu {
-                  // Todo: Figure out why this is like this
-                  //margin-top: 40px !important;
-                  //margin-left: -24px;
-                  //padding: 0 0 0 9px;
-                  //width: calc(100% + 52px);
 
                   > .item {
+                    // TODO: GEt rid of important
                     padding-left:24px !important;
+
+                    &.disabled {
+
+                    }
                     span {
                       font-family: Raleway;
                       font-size: 18px;
