--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -24,8 +24,13 @@ $white: #f7f8fc;
 
 
 [worksheet="container"] {
+  * {
+    font-family: RT Raleway;
+    font-style: normal;
+  }
+
   font-family: RT Raleway;
-  font-style: normal;
+
 
   [worksheet="section"] {
     background:#f7f8fc;
@@ -56,7 +61,7 @@ $white: #f7f8fc;
           > div {
             flex:1;
             &[dropdown] {
-              z-index:1;
+              //z-index:1;
               width:330px;
               flex:initial;
               display:flex;
@@ -76,7 +81,7 @@ $white: #f7f8fc;
                 width: 100%;
                 left: 0;
                 top: 0;
-                z-index:10;
+                //z-index:10;
                 transition: 300ms;
                 &:last-child {
                   font-family: RT Raleway;
@@ -101,14 +106,26 @@ $white: #f7f8fc;
                   width: 100%;
                   height: 100%;
                   padding: 8px 24px;
+                  z-index:10;
+                  position: relative;
                 }
 
                 > .menu {
-
-                  > .item {
+padding:16px;
+                  .item {
                     // TODO: GEt rid of important
-                    padding-left:24px !important;
-
+                    padding-left:8px !important;
+                    height:42px;
+                    margin-bottom:8px;
+                    display:flex;
+                    line-height: 1em;
+                    align-items: center;
+                    font-weight: 400;
+                    font-family: RT Raleway;
+                    font-size:18px;
+                    &:last-child {
+                      margin-bottom:0px;
+                    }
                     &.disabled {
 
                     }
@@ -116,6 +133,34 @@ $white: #f7f8fc;
                       font-family: RT Raleway;
                       font-size: 18px;
                       color: #4D5160;
+                    }
+                  }
+
+                  [items=disabled] {
+                    position:relative;
+                    border-top:1px solid #ABAFBF;
+                    padding-top:8px;
+                    > .item {
+                      color: #ABAFBF;
+                    }
+                    &:before {
+                      content: "disabled";
+                      display: flex;
+                      background: white;
+                      text-transform: capitalize;
+                      font-size: 12px;
+                      flex: initial;
+                      text-align: right;
+                      padding-left: 4px;
+                      justify-content: flex-end;
+                      position: absolute;
+                      right: 0px;
+                      height: 14px;
+                      line-height: 14px;
+                      top: -7px;
+                      font-weight: 400;
+                      font-family: 'Cabin';
+                      color: #ABAFBF;
                     }
                   }
                 }
