--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -139,7 +139,9 @@ padding:16px;
                   [items=disabled] {
                     position:relative;
                     border-top:1px solid #ABAFBF;
-                    padding-top:8px;
+                    padding-top: 16px;
+                    margin-top: 16px;
+                  
                     > .item {
                       color: #ABAFBF;
                     }
