--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -173,6 +173,10 @@ $white: #f7f8fc;
                     border-top:1px solid #ABAFBF;
                     padding-top: 16px;
                     margin-top: 16px;
+
+                    &:empty {
+                      display:none;
+                    }
                   
                     > .item {
                       color: #ABAFBF;
