--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -94,8 +94,8 @@ $white: #f7f8fc;
                     font-weight: bold;
                     display: flex;
                     height: 14px;
-                    margin-left: 2px;
-                    opacity: .6;
+                    margin-left: 3px;
+                    opacity: .4;
                     font-family: 'Cabin';
                     position:relative;
                     bottom:1px;
@@ -133,7 +133,7 @@ $white: #f7f8fc;
                   font-size: 14px;
                   width: 100%;
                   height: 100%;
-                  padding: 8px 24px;
+                  padding: 10px 24px 0 24px;
                   z-index:10;
                   position: relative;
                   text-transform: capitalize;
@@ -162,7 +162,15 @@ $white: #f7f8fc;
                     }
                     &.active {
                       background: #0B1421;
-                      color:white;
+
+                      &:hover {
+                        background: #0B1421;
+                        color:white;
+                      }
+
+                      span {
+                        color:white;
+                      }
                     }
                     &:last-child {
                       margin-bottom:0px;
@@ -170,10 +178,44 @@ $white: #f7f8fc;
                     &.disabled {
 
                     }
+
+                    > div {
+                      display:flex;
+                      align-items: center;
+                    }
                     span {
                       font-family: RT Raleway;
                       font-size: 18px;
                       color: #4D5160;
+
+                      &.amt {
+                        &:before {
+                          content:attr(prefix);
+                          font-size: 10px;
+                          margin-right: 1px;
+                          position: relative;
+                          top: -6px;
+                        }
+                        &:after {
+                          content:attr(suffix);
+                          font-size:12px;
+
+                          opacity:.8;
+                          margin-left:1px;
+                        }
+                      }
+
+                      &[type=spacer] {
+                        padding: 0 8px;
+                        position: relative;
+                        line-height: 10px;
+                        height: 15px;
+
+                        &:before {
+                          content:attr(seperator);;
+                          font-size:14px;
+                        }
+                      }
                     }
                   }
 
@@ -187,8 +229,15 @@ $white: #f7f8fc;
                       display:none;
                     }
                   
-                    > .item {
-                      color: #ABAFBF;
+                    .item {
+
+                      span {
+                        color: #ABAFBF;
+                      }
+                      &:hover {
+                        background: rgba(255,255,255,1);
+                      }
+
                     }
                     &:before {
                       content: "disabled";
