--- a/src/components/Genesis/Worksheet/Worksheet.scss
+++ b/src/components/Genesis/Worksheet/Worksheet.scss
@@ -125,7 +125,7 @@ $white: #f7f8fc;
                   box-shadow: 0px 1.5px 10px rgba(0,0,0,.2) !important;
                 }
               }
-              > .dropdown {
+              > .ui.dropdown {
                 > .text {
                   font-family: RT Raleway;
                   color: #4D5160;
@@ -138,86 +138,8 @@ $white: #f7f8fc;
                   position: relative;
                   text-transform: capitalize;
                 }
-
                 > .menu {
                   padding:16px;
-
-                  .item {
-                    // TODO: GEt rid of important
-                    padding-left:16px !important;
-                    height:42px;
-                    margin-bottom:8px;
-                    display:flex;
-                    line-height: 1em;
-                    align-items: center;
-                    font-weight: 400;
-                    font-family: RT Raleway;
-                    font-size:18px;
-
-                    &:hover, &.active {
-                      border-radius: 4px;
-                    }
-                    &:hover {
-                      background: #F7F8FC;
-                    }
-                    &.active {
-                      background: #0B1421;
-
-                      &:hover {
-                        background: #0B1421;
-                        color:white;
-                      }
-
-                      span {
-                        color:white;
-                      }
-                    }
-                    &:last-child {
-                      margin-bottom:0px;
-                    }
-                    &.disabled {
-
-                    }
-
-                    > div {
-                      display:flex;
-                      align-items: center;
-                    }
-                    span {
-                      font-family: RT Raleway;
-                      font-size: 18px;
-                      color: #4D5160;
-
-                      &.amt {
-                        &:before {
-                          content:attr(prefix);
-                          font-size: 10px;
-                          margin-right: 1px;
-                          position: relative;
-                          top: -6px;
-                        }
-                        &:after {
-                          content:attr(suffix);
-                          font-size:12px;
-
-                          opacity:.8;
-                          margin-left:1px;
-                        }
-                      }
-
-                      &[type=spacer] {
-                        padding: 0 8px;
-                        position: relative;
-                        line-height: 10px;
-                        height: 15px;
-
-                        &:before {
-                          content:attr(seperator);;
-                          font-size:14px;
-                        }
-                      }
-                    }
-                  }
 
                   [items=disabled] {
                     position:relative;
@@ -228,7 +150,7 @@ $white: #f7f8fc;
                     &:empty {
                       display:none;
                     }
-                  
+
                     .item {
 
                       span {
