--- a/src/components/Genesis/OptionPicker/OptionPicker.scss
+++ b/src/components/Genesis/OptionPicker/OptionPicker.scss
@@ -1,1 +1,111 @@
-.OptionPicker {}
+$blue-dark: #00338d;
+$blue: #115dc4;
+$blue-light: #5196e5;
+
+$black: #0b1421;
+$grey-dark: #373b49;
+$grey: #676c7d;
+$grey-light: #abafbf;
+$white: #f7f8fc;
+@mixin OptionPickerWrapper {
+  [worksheet="section"] > div [type=header] > div:first-child {
+    @content;
+  }
+}
+
+@include OptionPickerWrapper {
+  > div {
+    flex:1;
+    &[dropdown] {
+      //z-index:1;
+      width:330px;
+      flex:initial;
+      display:flex;
+      flex-direction: column;
+      background: white;
+      border-radius: 4px;
+      height: 64px;
+      padding: 12px 24px;
+      border-bottom: 1px solid #0000001f;
+      box-shadow: 0px 0.5px 0px #0000001f;
+      position:relative;
+      transition: 300ms;
+      > div {
+        flex:1;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        top: 0;
+        //z-index:10;
+        transition: 300ms;
+
+        + [label=selectedLimit] {
+          display: flex;
+          align-items: center;
+          margin-top: 19px;
+          > span {
+            font-size: 12px;
+            text-transform: uppercase;
+            font-weight: bold;
+            display: flex;
+            height: 14px;
+            margin-left: 3px;
+            opacity: .4;
+            font-family: 'Cabin';
+            position:relative;
+            bottom:1px;
+          }
+          > b {
+            display: flex;
+            width: 4px;
+            height: 4px;
+            background: grey;
+            border-radius: 100px;
+            margin: 0 16px;
+            opacity:.4;
+          }
+        }
+        &:last-child {
+          font-family: RT Raleway;
+          font-weight: normal;
+          font-size: 18px;
+          z-index:0;
+          position:relative;
+          display: flex;
+          //align-items: flex-end;
+        }
+
+        &.active {
+          border-bottom: 3px solid $black !important;
+          box-shadow: 0px 1.5px 10px rgba(0,0,0,.2) !important;
+        }
+      }
+      > .ui.dropdown {
+        > .text {
+          font-family: RT Raleway;
+          color: #4D5160;
+          font-weight: bold;
+          font-size: 14px;
+          width: 100%;
+          height: 100%;
+          padding: 10px 24px 0 24px;
+          z-index:10;
+          position: relative;
+          text-transform: capitalize;
+        }
+        > .menu {
+          padding:16px;
+        }
+
+        > .dropdown.icon {
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 48px;
+        }
+      }
+    }
+  }
+}
